# ShapeScanner

./: CMakeLists.txt
src/: main.cpp
src/basic/: scanner.h
src/utilis/: utilis.h
